compiler/testData/diagnostics/tests/inference/kt12399.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun foo(a: Any) {
    foo({ <!VALUE_PARAMETER_WITHOUT_EXPLICIT_TYPE!>index<!> -> } {  })
}